Added Profile Card Razor
Added razor component for profile card. Blocked out the bootstrap components ready for binding to profile model. Still needs to some parameters on the component to link to profile json.

--- a/Dev.Blog/Dev.Blog.csproj
+++ b/Dev.Blog/Dev.Blog.csproj
@@ -8,4 +8,11 @@
     <Folder Include="wwwroot\data\profiles\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\images\DefaultProfileThumb.png">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
