Piping Profile Card
Added some logical piping to the Profile Card to put in the data from parameters, going to have to look if there is a better way of handling razor parameters.

--- a/Dev.Blog/Dev.Blog.csproj
+++ b/Dev.Blog/Dev.Blog.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\data\profiles\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Update="wwwroot\images\DefaultProfileThumb.png">
+    <Content Update="wwwroot\images\profiles\DefaultProfileThumb.png">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
