--- a/Blazor.Dev.Blog/Blazor.Dev.Blog.csproj
+++ b/Blazor.Dev.Blog/Blazor.Dev.Blog.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Blazor.Dev.Blog.Lucene\Blazor.Dev.Blog.LuceneIndex.csproj" />
     <ProjectReference Include="..\Blazor.Dev.Blog.Models\Blazor.Dev.Blog.Models.csproj" />
   </ItemGroup>
 
@@ -18,6 +19,10 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\data\Indexes\" />
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
